name:                advent
version:             0.1.0.0
synopsis:            My solutions for the puzzles during the advent of code.
description:         Please see README.md
homepage:            http://github.com/patrickherrmann/advent#readme
license:             BSD3
license-file:        LICENSE
author:              Patrick Herrmann
maintainer:          patrickwherrmann@gmail.com
copyright:           Patrick Herrmann
category:            Puzzles
build-type:          Simple
cabal-version:       >=1.10

library

  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:    Day1,
                      Day2,
                      Day3,
                      Day4,
                      Day5
  build-depends:      base >= 4.7 && < 5,
                      split,
                      MissingH
