name:                advent
version:             0.1.0.0
synopsis:            My solutions for the puzzles during the advent of code.
description:         Please see README.md
homepage:            http://github.com/patrickherrmann/advent#readme
license:             BSD3
license-file:        LICENSE
author:              Patrick Herrmann
maintainer:          patrickwherrmann@gmail.com
copyright:           Patrick Herrmann
category:            Puzzles
build-type:          Simple
cabal-version:       >=1.10

source-repository head

  type:              git
  location:          https://github.com/patrickherrmann/advent.git

library

  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:    Day01,
                      Day02,
                      Day03,
                      Day04,
                      Day05,
                      Day06,
                      Day07,
                      Day08,
                      Day09,
                      Day10,
                      Day11,
                      Day12,
                      Day13,
                      Day14
  build-depends:      base >= 4.8 && < 5,
                      split,
                      containers,
                      array,
                      parsec,
                      mtl,
                      MissingH,
                      aeson,
                      scientific,
                      unordered-containers,
                      bytestring,
                      vector
