name:                 advent
version:              0.1.0.0
synopsis:             My solutions for the puzzles during the advent of code.
description:          Please see README.md
homepage:             http://github.com/patrickherrmann/advent#readme
license:              BSD3
license-file:         LICENSE
author:               Patrick Herrmann
copyright:            Patrick Herrmann 2016
maintainer:           patrickwherrmann@gmail.com
category:             Puzzles
build-type:           Simple
cabal-version:        >=1.10

library
  default-language:   Haskell2010
  default-extensions: LambdaCase
                      ViewPatterns
  hs-source-dirs:     src
  ghc-options:        -O2
  exposed-modules:    Day01
                      Day02
                      Day03
                      Day04
                      Day05
                      Day06
                      Day07
                      Day08
                      Day09
                      Day10
                      Day11
                      Day12
                      Day13
                      Day14
                      Day15
                      Day16
                      Day17
                      Day18
                      Day19
                      Day20
                      Day21
                      Day22
  build-depends:      base,
                      split,
                      containers,
                      array,
                      parsec,
                      mtl,
                      aeson,
                      scientific,
                      bytestring,
                      base16-bytestring,
                      cryptohash,
                      text,
                      safe

benchmark criterion
  default-language:   Haskell2010
  default-extensions: QuasiQuotes
  hs-source-dirs:     bench
  main-is:            Benchmarks.hs
  ghc-options:        -O2
  type:               exitcode-stdio-1.0
  other-modules:      Benchmarks.Day04
                      Benchmarks.Day06
  build-depends:      base,
                      advent,
                      criterion,
                      heredoc

source-repository head
  type:               git
  location:           https://github.com/patrickherrmann/advent.git
